Fix on CLT dsc text alignment

--- a/components/CharlotteArticle.module.scss
+++ b/components/CharlotteArticle.module.scss
@@ -610,6 +610,8 @@
             }
             .tsI_dsc {
                 max-width: 97%;
+                margin-left: auto;
+                margin-right: auto;
             }
 
             .tsI_btn {
@@ -628,6 +630,7 @@
             }
             .tsI_dsc {
                 max-width: 97%;
+                margin-right: auto;
             }
 
             .tsI_btn {
